--- a/src/index.css
+++ b/src/index.css
@@ -5,12 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #FBAB7E;
-background-image: linear-gradient(90deg, #FBAB7E 0%, #F7CE68 100%);
-text-align: center;
-
-
-  color: white;
+  background: blue;
 }
 
 code {
