--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: blue;
+  background-color: #8EC5FC;
+background-image: linear-gradient(90deg, #8EC5FC 0%, #E0C3FC 100%);
+text-align: center;
 }
 
 code {
